# liquidmaya

./: CHANGES.txt  CHANGES_ymesh.txt  ChangeLog  LICENSE.txt  README.md  README.txt  liquid.module
devkit/: liquidRIBGen.h
devkit/examples/: Makefile
devkit/liquidproxy/: build_proxy.cmd
devkit/liquidproxy/src/: CMakeLists.txt  liquidproxy.cpp
devkit/ribgens/testRIBStatus/: Makefile  build_2010  testRIBStatus.cpp
displayDrivers/3Delight/linux-x64/: liqmaya.dpy
displayDrivers/3Delight/osx/: liqmaya.dpy
displayDrivers/3Delight/osx-x64/: liqmaya.dpy
displayDrivers/3Delight/win/: liqmaya.dpy
icons/: Makefile  lif.psd  lif_but.xpm  lif_cs.xpm  lif_shd.xpm  lif_tex.xpm  liquidFluid.xpm  liquidFluidEditDisplacementShader.xpm  liquidFluidEditLightShader.xpm  liquidFluidEditSurfaceShader.xpm  liquidGlobalsWindow.xpm  liquidIcon2.xpm  liquidInfo.xpm  liquidInfo0.xpm  liquidLightSwatch.iff  liquidMenuButton.xpm  liquidRender.xpm  liquidRibBoxSwatch.iff  liquidViewLastRib.xpm  noPreview.iff  png2xpm  render_liquidCoShader.xcf  render_liquidCoShader.xpm  render_liquidDisplacement.xpm  render_liquidLight.xpm  render_liquidRibBox.xpm  render_liquidSurface.xpm  render_liquidVolume.xpm
include/: liqAqsisRenderer.h  liqAreaLightData.h  liqAttachPrefAttribute.h  liqBoundingBoxLocator.h  liqBucket.h  liqCoShaderNode.h  liqCoordSysNode.h  liqCustomNode.h  liqDelightRenderer.h  liqDisplacementNode.h  liqDisplacementSwitcherNode.h  liqEntropyRenderer.h  liqExpression.h  liqGenericShader.h  liqGetAttr.h  liqGetSloInfo.h  liqGlobalHelpers.h  liqGlobals.h  liqGlobalsNode.h  liqIOStream.h  liqJobList.h  liqLightNode.h  liqLightNodeBehavior.h  liqMayaNodeIds.h  liqMayaRenderView.h  liqMemory.h  liqNodeSwatch.h  liqParseString.h  liqPixieRenderer.h  liqPreviewShader.h  liqPrmanRenderer.h  liqProcessLauncher.h  liqRenderScript.h  liqRenderer.h  liqRiCommands.h  liqRibBakeSubdivisionData.h  liqRibClipPlaneData.h  liqRibCoordData.h  liqRibCurvesData.h  liqRibCustomNode.h  (+34 more)
lib/previewRibFiles/: subD_cube.rib  twoCurves.rib
lib/scripts/: dojob.py  installLiquidMaya.sh  test_rmt.py  test_rmt.xml  xml2afanasy.cmd  xml2afanasy.py  xml2afanasy.sh
lib/shaders/: Makefile  compile.cmd  compile.sh  liqEnvLight.sdl  liqEnvLight.slo  liquidPfxHair.sdl  liquidPfxHair.sdr  liquidPfxHair.slb  liquidPfxHair.slo  liquidPfxHair.slx  liquidPfxToon.sdl  liquidPfxToon.sdr  liquidPfxToon.slb  liquidPfxToon.slo  liquidPfxToon.slx  liquidarea.sdl  liquidarea.slx  liquiddistant.sdl  liquiddistant.slx  liquidpoint.sdl  liquidpoint.slx  liquidspot.sdl  liquidspot.slx  plastic.lif  shadowPassLight.sl
lib/shaders/src/: dummy.xml  liqEnvLight.sl  liquidPfxHair.sl  liquidPfxToon.sl  sltemp.i
lib/textures/: grid.tex  test_texture.tif
mel/: AEdagNodeInclude.mel  AEdependNodeTemplate.mel  AEliquidCamera.mel  AEliquidCoShaderRelated.mel  AEliquidCoShaderTemplate.mel  AEliquidCoordSysTemplate.mel  AEliquidDisplacementSwitcherTemplate.mel  AEliquidDisplacementTemplate.mel  AEliquidFGGIOverrideFlags.mel  AEliquidInstanceFlags.mel  AEliquidLightTemplate.mel  AEliquidNurbsCurveShape.mel  AEliquidPaintEffects.mel  AEliquidRibBoxTemplate.mel  AEliquidRibRequestTemplate.mel  AEliquidSetFlags.mel  AEliquidShadowControls.mel  AEliquidSubdivisionSurfaceShape.mel  AEliquidSurfaceRelated.mel  AEliquidSurfaceSwitcherTemplate.mel  AEliquidSurfaceTemplate.mel  AEliquidSwitcherRelatedTemplate.mel  AEliquidVolumeTemplate.mel  AEobjectSetTemplate.mel  AEoldBlindDataBaseTemplate.mel  connectNodeToAttrOverride.mel  connectNodeToNodeOverride.mel  createLiquidGlobalsTab.mel  getMultiListerSelection.mel  liquidAttachParams.mel  liquidAttributeManager.mel  liquidAttributes.mel  liquidBuildHypergraphNodePopupMenuItems.mel  liquidCommon.mel  liquidConvMTOR.mel  liquidConvertMtor.mel  liquidConvertShadingNetworkToRSL.mel  liquidCreateGlobalsTab.mel  liquidDelayedReadArchive.mel  liquidFileBrowser.mel  (+39 more)
mel/2011/: liquidFileBrowser.mel  liquidParamDialogWindow.mel
mel/2012/: liquidBuildHypergraphNodePopupMenuItems.mel
mel/unused/: liquidAttrWindow.mel  liquidContainers.mel  liquidFluidOutliner.mel  liquidNugget.mel  liquidSLManager.mel
plug-ins/: readme.txt
renderers/: 3Delight.lg  Air.lg  Aqsis.lg  Makefile  PRMan.lg  Pixie.lg
ribLib/: CMakeLists.txt  Makefile  common.h  error.cpp  error.h  lex.var.c  ri.cpp  ri.h  riInterface.cpp  riInterface.h  ribOut.cpp  ribOut.h  variable.cpp  variable.h  variable.y
src/: CMakeLists.txt  liquid.version  liquidBin.cpp  liquidPlug.cpp
src/common/: liqAreaLightData.cpp  liqAttachPrefAttribute.cpp  liqBoundingBoxLocator.cpp  liqBucket.cpp  liqCoShaderNode.cpp  liqCoordSysNode.cpp  liqDisplacementNode.cpp  liqDisplacementSwitcherNode.cpp  liqExpression.cpp  liqGenericShader.cpp  liqGetAttr.cpp  liqGetSloInfo.cpp  liqGlobalHelpers.cpp  liqGlobalsNode.cpp  liqJobList.cpp  liqLightNode.cpp  liqLightNodeBehavior.cpp  liqMayaRenderView.cpp  liqMemory.cpp  liqNodeSwatch.cpp  liqParseString.cpp  liqPreviewShader.cpp  liqProcessLauncher.cpp  liqRenderer.cpp  liqRiCommands.cpp  liqRibClipPlaneData.cpp  liqRibCoordData.cpp  liqRibCurvesData.cpp  liqRibData.cpp  liqRibGenData.cpp  liqRibHT.cpp  liqRibHierarchicalSubdivisionData.cpp  liqRibImplicitSphereData.cpp  liqRibLightData.cpp  liqRibLocatorData.cpp  liqRibMayaSubdivisionData.cpp  liqRibMeshData.cpp  liqRibNode.cpp  liqRibNuCurveData.cpp  liqRibObj.cpp  (+21 more)
src/displayDrivers/: CMakeLists.txt  liqMayaDisplayDriver.cpp  liqMayaDisplayDriver.h  liqMayaDisplayDriver3Delight.cpp  liqMayaDisplayDriverAir.cpp  liqMayaDisplayDriverAir.h  liqMayaDisplayDriverAqsis.cpp  liqMayaDisplayDriverPixie.cpp  liqMayaDisplayDriverPixie.h
